# projeto_integrador

./: .env  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml
application/: Dockerfile  requirements.txt
application/app/: main.py
application/app/src/: base_client.py  events.py  events_manager.py  postgres_client.py
application/src/controller/: main.py
application/src/models/: events.py
application/src/repository/: base_client.py
application/src/repository/postgres/: postgres_client.py
application/src/service/: events_manager.py
application/src/tests/: test_main.py
backend/: DOCKERFILE  Dockerfile  requirements.txt
backend/api_back/: .gitignore  README.md  pyproject.toml
backend/api_back/api_back/: app.py
backend/api_back/tests/: test_api_back.py
backend/app/: events.py  events_manager.py  main.py
backend/app/app/src/: events.py
backend/application/: Dockerfile
backend/application/app/: main.py
backend/application/app/src/: events_manager.py
backend/database/: Dockerfile  init.sql
database/: Dockerfile  init.sql
frontend/: README.md  index.html  script.js  style.css
web/: index.html  script.js  style.css
