[tool.poetry]
name = "api_back"
version = "0.1.0"
description = ""
authors = ["dev-perez <alyne.kmp@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
exceptiongroup = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
black = "^24.3.0"
ruff = "^0.3.4"
httpx = "^0.27.0"
isort = "^5.13.2"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff check . && blue --check . --diff && isort --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn api_back.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=api_back -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
